# libopenspc

./: Makefile.am  README  README.md  configure.ac  do_autoconf.sh  meson.build  to-do.txt
examples/: Makefile  Makefile.am  meson.build  openspc.py  ospcplay.c  ospcplay.py  spccomm.c
libopenspc/: Makefile  Makefile.am  dsp.c  dsp.h  main.c  main.cc  meson.build  openspc.h  openspc.py  spc_cpu.cc  spc_cpu.h
libopenspc/SNEeSe/: Makefile.am  README  SPCimpl.c  SPCimpl.h  meson.build  sneese_spc.c  sneese_spc.h  spc700.c  spc_cpu.cc
test/: meson.build  regression_test.py
test/data/: basic.spc.xz  brr_no_noise.spc.xz  brr_noise.spc.xz  direct_env.spc.xz  env_timing.spc.xz  noise.spc.xz  pitch_mod.spc.xz  zsnes.zst.xz
